# inflation-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: update_data.yml
site/: index.html
site/css/: style.css
site/data/brazil/: historical.json  latest.json
site/js/: app.js
src/builders/: generate_site.py
src/builders/templates/: index.html
src/collectors/brazil/: bcb_client.py  bcb_vectors.py  focus_client.py  ibge_client.py  sidra_client.py
src/collectors/us/: fred_client.py  zillow_client.py
src/processors/brazil/: charts.py  destaques.py  grupos.py  resumo.py  surpresa.py
src/processors/us/: panel.py
tests/: test_processors.py
