[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inflation-dashboard"
version = "0.1.0"
description = "Painel de inflação Brasil (IPCA) e Estados Unidos (CPI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pedro Tunholi", email = "pltunholi@gmail.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "plotly>=5.18.0",
    "python-bcb>=0.3.0",
    "openpyxl>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
